--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<p style="text-align:justify;">
-											I am a PhD researcher at CNRS and Université de Lorraine, focused on generative 
+											I am a Costa Rican PhD researcher at CNRS and Université de Lorraine, focused on generative 
 											AI and multilingual natural language processing. My work centers on making 
 											language technologies more inclusive, with an emphasis on multilingual text 
 											generation and evaluation. I have published at major conferences like ACL, INLG, 
@@ -130,7 +130,7 @@
 											William Soto Martinez,<br>Yannick Parmentier, and Claire Gardent<br>(<i>to appear, ACL 2025</i> )
 										</p>
 										<ul class="actions">
-											<li><a href="https://gitlab.inria.fr/wsotomar/HQL-Hierarchical-QLoRA" class="button" target="_blank" rel="noopener noreferrer">GitLab</a></li>
+											<li><a href="https://gitlab.inria.fr/wsotomar/semantic-evaluation-of-multilingual-data-to-text-generation-via-nli-fine-tuning/ class="button" target="_blank" rel="noopener noreferrer">GitLab</a></li>
 										</ul>
 									</li>
 									
@@ -175,7 +175,6 @@
 											William Soto Martinez<br>(<i>Master Thesis</i> )
 										</p>
 										<ul class="actions">
-											<li><a href="https://aclanthology.org/2024.inlg-main.7" class="button" target="_blank" rel="noopener noreferrer">HAL</a></li>
 											<li><a href="https://github.com/sotwi/xpareval" class="button" target="_blank" rel="noopener noreferrer">GitHub</a></li>
 										</ul>
 									</li>
