--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 											William Soto Martinez,<br>Yannick Parmentier, and Claire Gardent<br>(<i>to appear, ACL 2025</i> )
 										</p>
 										<ul class="actions">
-											<li><a href="https://gitlab.inria.fr/wsotomar/semantic-evaluation-of-multilingual-data-to-text-generation-via-nli-fine-tuning/ class="button" target="_blank" rel="noopener noreferrer">GitLab</a></li>
+											<li><a href="https://gitlab.inria.fr/wsotomar/semantic-evaluation-of-multilingual-data-to-text-generation-via-nli-fine-tuning"s class="button" target="_blank" rel="noopener noreferrer">GitLab</a></li>
 										</ul>
 									</li>
 									
