Add resume and link to master's thesis

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
 												<span class="icon solid fa-envelope" style="margin-right: 0.4em;"></span>
 												<a href="mailto:williamsotomartinez@gmail.com">williamsotomartinez@gmail.com</a>
 											</dd>
+											<dd>
+												<span class="icon solid fa-file" style="margin-right: 0.4em;"></span>
+												<a href="documents/william_soto_resume_2025.pdf" target="_blank" rel="noopener noreferrer">Résumé</a>
+											</dd>
 										</dl>
 										
 										<ul class="icons profile-icons">
@@ -175,6 +179,7 @@
 											William Soto Martinez<br>(<i>Master Thesis</i> )
 										</p>
 										<ul class="actions">
+											<li><a href="https://inria.hal.science/hal-05113052" class="button">HAL</a></li>
 											<li><a href="https://github.com/sotwi/xpareval" class="button" target="_blank" rel="noopener noreferrer">GitHub</a></li>
 										</ul>
 									</li>
