Fix ABoutMe navigation bar

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<div id="main">
 
 						<!-- Introduction -->
-							<section id="intro" class="main">
+							<section id="aboutme" class="main">
 								
 								<header class="major">
 									<h2>About Me</h2>
