rename profile picture

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 									<div class="content profile-content">
 										<span class="image">
 											<picture>
-												<source srcset="images/me.webp" type="image/webp">
-												<img src="images/me.webp" alt="Profile picture of William Soto Martinez" loading="lazy" />
+												<source srcset="images/william_soto.webp" type="image/webp">
+												<img src="images/william_soto.webp" alt="Profile picture of William Soto Martinez" loading="lazy" />
 											</picture>
 										</span>
 								
