Fix links to new tab

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 										</dl>
 										
 										<ul class="icons profile-icons">
-											<li><a href="https://www.linkedin.com/in/wilsoto" class="icon brands fa-linkedin alt" style="font-size: 0.7em;"><span class="label">LinkedIn</span></a></li>
-											<li><a href="https://github.com/sotwi" class="icon brands fa-github alt" style="font-size: 0.7em;"><span class="label">GitHub</span></a></li>
-											<li><a href="https://gitlab.inria.fr/wsotomar" class="icon brands fa-gitlab alt" style="font-size: 0.7em;"><span class="label">Inria GitLab</span></a></li>
-											<li><a href="https://gitlab.com/williamsotomartinez" class="icon brands fa-gitlab alt" style="font-size: 0.7em;"><span class="label">GitLab</span></a></li>
+											<li><a href="https://www.linkedin.com/in/wilsoto" class="icon brands fa-linkedin alt" style="font-size: 0.7em;" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
+											<li><a href="https://github.com/sotwi" class="icon brands fa-github alt" style="font-size: 0.7em;" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
+											<li><a href="https://gitlab.inria.fr/wsotomar" class="icon brands fa-gitlab alt" style="font-size: 0.7em;" target="_blank" rel="noopener noreferrer"><span class="label">Inria GitLab</span></a></li>
+											<li><a href="https://gitlab.com/williamsotomartinez" class="icon brands fa-gitlab alt" style="font-size: 0.7em;" target="_blank" rel="noopener noreferrer"><span class="label">GitLab</span></a></li>
 										</ul>
 									</div>
 								</div>
