--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
 											William Soto Martinez,<br>Yannick Parmentier, and Claire Gardent<br>(<i>to appear, ACL 2025</i> )
 										</p>
 										<ul class="actions">
+											<li><a href="https://hal.science/hal-05138142v1" class="button" target="_blank" rel="noopener noreferrer">HAL</a></li>
+											<li><a href="https://huggingface.co/spaces/WilliamSotoM/Multilingual_D2T_Semantic_Evaluation" class="button" target="_blank" rel="noopener noreferrer">Demo</a></li>
 											<li><a href="https://gitlab.inria.fr/wsotomar/semantic-evaluation-of-multilingual-data-to-text-generation-via-nli-fine-tuning"s class="button" target="_blank" rel="noopener noreferrer">GitLab</a></li>
 										</ul>
 									</li>
@@ -168,7 +170,7 @@
 											William Soto Martinez<br>(<i>LIFT 2020</i> )
 										</p>
 										<ul class="actions">
-											<li><a href="https://hal.science/hal-03047144" class="button">HAL</a></li>
+											<li><a href="https://hal.science/hal-03047144" class="button" target="_blank" rel="noopener noreferrer">HAL</a></li>
 											<li><a href="https://gitlab.com/williamsotomartinez/gclit" class="button" target="_blank" rel="noopener noreferrer">GitLab</a></li>
 										</ul>
 									</li>
@@ -179,7 +181,7 @@
 											William Soto Martinez<br>(<i>Master Thesis</i> )
 										</p>
 										<ul class="actions">
-											<li><a href="https://inria.hal.science/hal-05113052" class="button">HAL</a></li>
+											<li><a href="https://inria.hal.science/hal-05113052" class="button" target="_blank" rel="noopener noreferrer">HAL</a></li>
 											<li><a href="https://github.com/sotwi/xpareval" class="button" target="_blank" rel="noopener noreferrer">GitHub</a></li>
 										</ul>
 									</li>
@@ -199,7 +201,7 @@
 											Cripwell et al.<br>(<i>MMNLG 2023</i> )
 										</p>
 										<ul class="actions">
-											<li><a href="https://aclanthology.org/2023.mmnlg-1.6" class="button">ACL</a></li>
+											<li><a href="https://aclanthology.org/2023.mmnlg-1.6" class="button" target="_blank" rel="noopener noreferrer">ACL</a></li>
 											<li><a href="https://github.com/WebNLG/2023-Challenge/" class="button" target="_blank" rel="noopener noreferrer">GitHub</a></li>
 										</ul>
 									</li>
