Add another Demo

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 										</p>
 										<ul class="actions">
 											<li><a href="https://aclanthology.org/2024.inlg-main.7" class="button" target="_blank" rel="noopener noreferrer">PDF</a></li>
+											<li><a href="https://huggingface.co/spaces/WilliamSotoM/Multilingual_AMR-to-Text_via_PTHQL" class="button" target="_blank" rel="noopener noreferrer">Demo</a></li>
 											<li><a href="https://gitlab.inria.fr/wsotomar/HQL-Hierarchical-QLoRA" class="button" target="_blank" rel="noopener noreferrer">Git</a></li>
 										</ul>
 									</li>
