--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 											William Soto Martinez,<br>Yannick Parmentier, and Claire Gardent<br>(<i>to appear, ACL 2025</i> )
 										</p>
 										<ul class="actions">
-											<li><a href="https://hal.science/hal-05138142v1" class="button" target="_blank" rel="noopener noreferrer">PDF</a></li>
+											<li><a href="https://aclanthology.org/2025.findings-acl.542" class="button" target="_blank" rel="noopener noreferrer">PDF</a></li>
 											<li><a href="https://gitlab.inria.fr/wsotomar/semantic-evaluation-of-multilingual-data-to-text-generation-via-nli-fine-tuning"s class="button" target="_blank" rel="noopener noreferrer">Git</a></li>
 											<li><a href="https://huggingface.co/spaces/WilliamSotoM/Multilingual_D2T_Semantic_Evaluation" class="button" target="_blank" rel="noopener noreferrer">Demo</a></li>
 										</ul>
