--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1><b>William Soto Martinez</b></h1>
-						<h3>Researcher in Multilingual Natural Language Generation and Evaluation.</h3>
+						<h3>Multilingual NLP Researcher | Generation and Evaluation</h3>
 					</header>
 
 				<!-- Nav -->
