--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		
+		<link rel="icon" href="images/WSM.png" type="image/png">
+		
 		<!-- Load Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
 		
