Update index.html (EMNLP 2025)

--- a/index.html
+++ b/index.html
@@ -200,6 +200,14 @@
 									<h2>Collaborations</h2>
 								</header>
 								
+																<ul class="features">
+									<li>
+										<p>
+											<b>Multilingual Verbalisation of Knowledge Graphs</b><br>
+											Song, Soto et al.<br>(<i>EMNLP 2025</i> )<br><i>[to appear]</i>
+										</p>
+									</li>
+								
 								<ul class="features">
 									<li>
 										<p>
