Update resume and index.html (EMNLP 2025)

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 									<li>
 										<p>
 											<b>Multilingual Verbalisation of Knowledge Graphs</b><br>
-											Song, Soto et al.<br>(<i>EMNLP 2025</i> )<br><i>[to appear]</i>
+											Song et al.<br>(<i>EMNLP 2025</i> )<br><i>[to appear]</i>
 										</p>
 									</li>
 								
